# DBSync

./: .gitignore  CMakeLists.txt  DLL_MANIFEST.md  INSTALL.md  INSTALL_EMBEDDED.md  README.md  build.bat  build_debug.bat  fetch_deps.bat  mingw-toolchain.cmake
config/: dbsync.conf  mapping.json
resources/: resource.rc
src/: ChangeTracker.cpp  ChangeTracker.h  Common.h  ConfigManager.cpp  ConfigManager.h  ConflictResolver.cpp  ConflictResolver.h  DbSyncApp.cpp  DbSyncApp.h  FirebirdManager.cpp  FirebirdManager.h  Logger.cpp  Logger.h  MappingManager.cpp  MappingManager.h  NetworkManager.cpp  NetworkManager.h  SqliteManager.cpp  SqliteManager.h  SyncManager.cpp  SyncManager.h  SystemTray.cpp  SystemTray.h  main.cpp
